# Document-Query-Engine

./: .gitignore  IMPLEMENTATION_SUMMARY.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  TESTING.md  main.py  pyproject.toml  test_search.py  test_upload.py
app/: config.py
app/api/: routes.py
app/models/: document.py
app/services/: document_service.py  embedding_service.py  file_parser.py  llm_service.py  mongodb_service.py  rag_service.py  search_service.py
